--- a/package.json
+++ b/package.json
@@ -51,7 +51,13 @@
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "autobind-decorator": "^1.3.3",
+    "d3": "^3.5.12",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "lodash": "^4.0.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "style-loader": "^0.13.0"
   }
 }
